# openfhe-serial-examples

./: .gitignore  CMakeLists.txt  README.md  Release_Notes.md  demoscript_pre_tmux.sh
demoData/images/: README.md
demoData/keys/: README.md
src/olc_net/: net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h  olc_net.h
src/pre_net/: CMakeLists.txt  hexdump.h  pre_client.h  pre_consumer.cpp  pre_producer.cpp  pre_server.cpp  pre_server.h  pre_utils.h
src/pre_net_demo/: CMakeLists.txt  hexdump.h  pre_client.h  pre_consumer.cpp  pre_producer.cpp  pre_server.cpp  pre_server.h  pre_utils.h
src/real_server/: CMakeLists.txt  real_client.cpp  real_server.cpp  utils.h
src/real_socket_server/: CMakeLists.txt  real_socket_client.cpp  real_socket_server.cpp  utils_socket.h
src/thresh_net_1/: CMakeLists.txt  thresh_client.h  thresh_client_a.cpp  thresh_client_b.cpp  thresh_server.cpp  thresh_server.h  thresh_utils.h
src/thresh_net_2/: CMakeLists.txt  thresh_client.h  thresh_client_a.cpp  thresh_client_b.cpp  thresh_server.cpp  thresh_server.h  thresh_utils.h
